--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.28",
+    "mdbvue": "^5.8.1",
+    "vue": "^2.6.10",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
