--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "bootstrap-vue": "^2.0.0-rc.28",
     "mdbvue": "^5.8.1",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
